--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
+    "@prisma/client": "^6.14.0",
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@tanstack/react-query": "^5.83.0",
     "blocklock-js": "^1.0.0",
@@ -21,6 +22,7 @@
     "lucide-react": "^0.479.0",
     "next": "15.3.0",
     "pino-pretty": "^11.2.2",
+    "prisma": "^6.14.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.3.0",
